{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 1270,
  "lineage": "b1c19b99-4436-6305-9c55-604e7f30de79",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-019b9d054031a0268",
            "arn": "arn:aws:ec2:us-east-2:354918372540:instance/i-0fa6833f8478fce7f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa6833f8478fce7f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mario",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00b2e24a5d7f92923",
            "private_dns": "ip-10-0-1-88.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.88",
            "public_ip": "18.216.91.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d78beb526838bf51",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dc49e99e48fa094b",
            "tags": {
              "Name": "Mario-EC2-Bastion "
            },
            "tags_all": {
              "Name": "Mario-EC2-Bastion "
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0495bfde656e48f00"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.security_group.aws_security_group.Mario_SecGroup",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.Mario_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Mario_SecGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:354918372540:security-group/sg-0495bfde656e48f00",
            "description": "Security group with inbond SSH, HTTP, HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0495bfde656e48f00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Mario-Security-Group",
            "name_prefix": "",
            "owner_id": "354918372540",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Mario-Security-Group"
            },
            "tags_all": {
              "Name": "Mario-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-092c452be7896e8a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.Mario_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d9cee816f99ab6b",
            "arn": "arn:aws:ec2:us-east-2:354918372540:elastic-ip/eipalloc-01d9cee816f99ab6b",
            "domain": "vpc",
            "id": "eipalloc-01d9cee816f99ab6b",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-14-20-92.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.20.92",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Mario-NAT-EIP"
            },
            "tags_all": {
              "Name": "Mario-NAT-EIP"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:354918372540:internet-gateway/igw-08fc0762df84622ad",
            "id": "igw-08fc0762df84622ad",
            "owner_id": "354918372540",
            "tags": {
              "Name": "Mario_VPC-IGW"
            },
            "tags_all": {
              "Name": "Mario_VPC-IGW"
            },
            "vpc_id": "vpc-092c452be7896e8a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.Mario_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d9cee816f99ab6b",
            "association_id": "eipassoc-09a5085f22f705aa2",
            "connectivity_type": "public",
            "id": "nat-0bd6ce080e06f20fc",
            "network_interface_id": "eni-0e3ade8c4d6699ef5",
            "private_ip": "10.0.1.17",
            "public_ip": "3.14.20.92",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dc49e99e48fa094b",
            "tags": {
              "Name": "Mario_VPC-NAT-Gateway"
            },
            "tags_all": {
              "Name": "Mario_VPC-NAT-Gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.Mario_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:354918372540:route-table/rtb-06e898a765744e4ae",
            "id": "rtb-06e898a765744e4ae",
            "owner_id": "354918372540",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bd6ce080e06f20fc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Mario_VPC-Private-RT"
            },
            "tags_all": {
              "Name": "Mario_VPC-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-092c452be7896e8a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.Mario_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:354918372540:route-table/rtb-08096f054903127cf",
            "id": "rtb-08096f054903127cf",
            "owner_id": "354918372540",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08fc0762df84622ad",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Mario_VPC-Public-RT"
            },
            "tags_all": {
              "Name": "Mario_VPC-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-092c452be7896e8a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.Mario_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1c2b0f725651b3d",
            "route_table_id": "rtb-06e898a765744e4ae",
            "subnet_id": "subnet-00783de69955775fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.Mario_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e978a33e28bb7706",
            "route_table_id": "rtb-06e898a765744e4ae",
            "subnet_id": "subnet-0517197894453ff01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.Mario_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d1b1fdf35f1a746",
            "route_table_id": "rtb-08096f054903127cf",
            "subnet_id": "subnet-0dc49e99e48fa094b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.Mario_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02311ed8eb0e6cb13",
            "route_table_id": "rtb-08096f054903127cf",
            "subnet_id": "subnet-0216e866ead61c41f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.Mario_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:354918372540:subnet/subnet-00783de69955775fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00783de69955775fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "354918372540",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Mario Private Subnet 1",
              "kubernetes.io/cluster/Mario-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Mario Private Subnet 1",
              "kubernetes.io/cluster/Mario-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-092c452be7896e8a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.Mario_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:354918372540:subnet/subnet-0517197894453ff01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0517197894453ff01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "354918372540",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Mario Private Subnet 2",
              "kubernetes.io/cluster/Mario-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Mario Private Subnet 2",
              "kubernetes.io/cluster/Mario-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-092c452be7896e8a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.Mario_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:354918372540:subnet/subnet-0dc49e99e48fa094b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc49e99e48fa094b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "354918372540",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Mario Public Subnet 1",
              "kubernetes.io/cluster/Mario-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Mario Public Subnet 1",
              "kubernetes.io/cluster/Mario-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-092c452be7896e8a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.Mario_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:354918372540:subnet/subnet-0216e866ead61c41f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0216e866ead61c41f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "354918372540",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Mario Public Subnet 2",
              "kubernetes.io/cluster/Mario-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Mario Public Subnet 2",
              "kubernetes.io/cluster/Mario-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-092c452be7896e8a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.Mario_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Mario_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:354918372540:vpc/vpc-092c452be7896e8a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e0bf41cf601c091e",
            "default_route_table_id": "rtb-0891b4d6375afc704",
            "default_security_group_id": "sg-03e82cc231db16380",
            "dhcp_options_id": "dopt-036c113310286f2a8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-092c452be7896e8a1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0891b4d6375afc704",
            "owner_id": "354918372540",
            "tags": {
              "Name": "Mario-VPC"
            },
            "tags_all": {
              "Name": "Mario-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}